--- a/public/css/pages/manuals.css
+++ b/public/css/pages/manuals.css
@@ -9,16 +9,15 @@
   flex: 1;
   width: 100%;
   padding-top: 20px;
-  background-color: var(--accent-light);
 }
 
 .manuals-content{
-  flex: 3;
+  flex: 2;
   display: flex;
   flex-direction: column;
   align-items: start;
-  padding: 20px 20px 20px 20px ;
-  background-color: var(--card);
+  padding: 40px 40px 40px 40px;
+  background-color: var(--accent-light);
 }
 
 .manuals-subtitle{
@@ -29,17 +28,18 @@
 .manuals-link{
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: 700;
   color: var(--text);
   padding: 8px 10px 8px 16px;
 }
 
 .manuals-link:hover{
-  background-color: var(--bg);
+  background-color: var(--accent-light);
 }
 
 .active {
-  background-color: var(--bg);
+  background-color: var(--accent-light);
   border-radius: 3px;
 }
 
@@ -55,6 +55,10 @@
     flex-direction: column;
   }
 
+  .manuals-index{
+    flex: none;
+}
+
   /* Hide arrows next to each link */
   .link-symbol{
     display: none;
@@ -68,7 +72,6 @@
 }
 
 /* PAGES - CORVEE-TAKEN */
-
 .manuals-chores-table {
   width: 100%;
 }
